docs/3.4/workflow/v1alpha1/index.md
---
permalink: /3.4/workflow/v1alpha1/
---

# workflow.v1alpha1



* [amount](amount.md)
* [archiveStrategy](archiveStrategy.md)
* [archivedWorkflowDeletedResponse](archivedWorkflowDeletedResponse.md)
* [arguments](arguments.md)
* [artGCStatus](artGCStatus.md)
* [artifact](artifact.md)
* [artifactGC](artifactGC.md)
* [artifactGCSpec](artifactGCSpec.md)
* [artifactGCStatus](artifactGCStatus.md)
* [artifactLocation](artifactLocation.md)
* [artifactNodeSpec](artifactNodeSpec.md)
* [artifactPaths](artifactPaths.md)
* [artifactRepository](artifactRepository.md)
* [artifactRepositoryRef](artifactRepositoryRef.md)
* [artifactRepositoryRefStatus](artifactRepositoryRefStatus.md)
* [artifactResult](artifactResult.md)
* [artifactResultNodeStatus](artifactResultNodeStatus.md)
* [artifactoryArtifact](artifactoryArtifact.md)
* [artifactoryArtifactRepository](artifactoryArtifactRepository.md)
* [azureArtifact](azureArtifact.md)
* [azureArtifactRepository](azureArtifactRepository.md)
* [backoff](backoff.md)
* [basicAuth](basicAuth.md)
* [cache](cache.md)
* [clientCertAuth](clientCertAuth.md)
* [clusterWorkflowTemplate](clusterWorkflowTemplate.md)
* [clusterWorkflowTemplateCreateRequest](clusterWorkflowTemplateCreateRequest.md)
* [clusterWorkflowTemplateDeleteResponse](clusterWorkflowTemplateDeleteResponse.md)
* [clusterWorkflowTemplateLintRequest](clusterWorkflowTemplateLintRequest.md)
* [clusterWorkflowTemplateUpdateRequest](clusterWorkflowTemplateUpdateRequest.md)
* [collectEventRequest](collectEventRequest.md)
* [collectEventResponse](collectEventResponse.md)
* [condition](condition.md)
* [containerNode](containerNode.md)
* [containerSetRetryStrategy](containerSetRetryStrategy.md)
* [containerSetTemplate](containerSetTemplate.md)
* [continueOn](continueOn.md)
* [counter](counter.md)
* [createCronWorkflowRequest](createCronWorkflowRequest.md)
* [createS3BucketOptions](createS3BucketOptions.md)
* [cronWorkflow](cronWorkflow.md)
* [cronWorkflowDeletedResponse](cronWorkflowDeletedResponse.md)
* [cronWorkflowResumeRequest](cronWorkflowResumeRequest.md)
* [cronWorkflowSpec](cronWorkflowSpec.md)
* [cronWorkflowStatus](cronWorkflowStatus.md)
* [cronWorkflowSuspendRequest](cronWorkflowSuspendRequest.md)
* [dagTask](dagTask.md)
* [dagTemplate](dagTemplate.md)
* [data](data.md)
* [dataSource](dataSource.md)
* [event](event.md)
* [eventResponse](eventResponse.md)
* [executorConfig](executorConfig.md)
* [gauge](gauge.md)
* [gcsArtifact](gcsArtifact.md)
* [gcsArtifactRepository](gcsArtifactRepository.md)
* [getUserInfoResponse](getUserInfoResponse.md)
* [gitArtifact](gitArtifact.md)
* [hdfsArtifact](hdfsArtifact.md)
* [hdfsArtifactRepository](hdfsArtifactRepository.md)
* [header](header.md)
* [histogram](histogram.md)
* [http](http.md)
* [httpArtifact](httpArtifact.md)
* [httpAuth](httpAuth.md)
* [httpBodySource](httpBodySource.md)
* [httpHeader](httpHeader.md)
* [httpHeaderSource](httpHeaderSource.md)
* [infoResponse](infoResponse.md)
* [inputs](inputs.md)
* [item](item.md)
* [labelKeys](labelKeys.md)
* [labelValueFrom](labelValueFrom.md)
* [labelValues](labelValues.md)
* [lifecycleHook](lifecycleHook.md)
* [link](link.md)
* [lintCronWorkflowRequest](lintCronWorkflowRequest.md)
* [logEntry](logEntry.md)
* [manifestFrom](manifestFrom.md)
* [memoizationStatus](memoizationStatus.md)
* [memoize](memoize.md)
* [metadata](metadata.md)
* [metricLabel](metricLabel.md)
* [metrics](metrics.md)
* [mutex](mutex.md)
* [mutexHolding](mutexHolding.md)
* [mutexStatus](mutexStatus.md)
* [nodeResult](nodeResult.md)
* [nodeStatus](nodeStatus.md)
* [nodeSynchronizationStatus](nodeSynchronizationStatus.md)
* [noneStrategy](noneStrategy.md)
* [oAuth2Auth](oAuth2Auth.md)
* [oAuth2EndpointParam](oAuth2EndpointParam.md)
* [ossArtifact](ossArtifact.md)
* [ossArtifactRepository](ossArtifactRepository.md)
* [ossLifecycleRule](ossLifecycleRule.md)
* [outputs](outputs.md)
* [parallelSteps](parallelSteps.md)
* [parameter](parameter.md)
* [plugin](plugin.md)
* [podGC](podGC.md)
* [prometheus](prometheus.md)
* [rawArtifact](rawArtifact.md)
* [resourceTemplate](resourceTemplate.md)
* [resubmitArchivedWorkflowRequest](resubmitArchivedWorkflowRequest.md)
* [retryAffinity](retryAffinity.md)
* [retryArchivedWorkflowRequest](retryArchivedWorkflowRequest.md)
* [retryNodeAntiAffinity](retryNodeAntiAffinity.md)
* [retryStrategy](retryStrategy.md)
* [s3Artifact](s3Artifact.md)
* [s3ArtifactRepository](s3ArtifactRepository.md)
* [s3EncryptionOptions](s3EncryptionOptions.md)
* [scriptTemplate](scriptTemplate.md)
* [semaphoreHolding](semaphoreHolding.md)
* [semaphoreRef](semaphoreRef.md)
* [semaphoreStatus](semaphoreStatus.md)
* [sequence](sequence.md)
* [submit](submit.md)
* [submitOpts](submitOpts.md)
* [suppliedValueFrom](suppliedValueFrom.md)
* [suspendTemplate](suspendTemplate.md)
* [synchronization](synchronization.md)
* [synchronizationStatus](synchronizationStatus.md)
* [tarStrategy](tarStrategy.md)
* [template](template.md)
* [templateRef](templateRef.md)
* [transformationStep](transformationStep.md)
* [ttlStrategy](ttlStrategy.md)
* [updateCronWorkflowRequest](updateCronWorkflowRequest.md)
* [userContainer](userContainer.md)
* [valueFrom](valueFrom.md)
* [version](version.md)
* [volumeClaimGC](volumeClaimGC.md)
* [workflow](workflow.md)
* [workflowCreateRequest](workflowCreateRequest.md)
* [workflowDeleteResponse](workflowDeleteResponse.md)
* [workflowEventBinding](workflowEventBinding.md)
* [workflowEventBindingSpec](workflowEventBindingSpec.md)
* [workflowLintRequest](workflowLintRequest.md)
* [workflowMetadata](workflowMetadata.md)
* [workflowResubmitRequest](workflowResubmitRequest.md)
* [workflowResumeRequest](workflowResumeRequest.md)
* [workflowRetryRequest](workflowRetryRequest.md)
* [workflowSetRequest](workflowSetRequest.md)
* [workflowSpec](workflowSpec.md)
* [workflowStatus](workflowStatus.md)
* [workflowStep](workflowStep.md)
* [workflowStopRequest](workflowStopRequest.md)
* [workflowSubmitRequest](workflowSubmitRequest.md)
* [workflowSuspendRequest](workflowSuspendRequest.md)
* [workflowTaskSetSpec](workflowTaskSetSpec.md)
* [workflowTaskSetStatus](workflowTaskSetStatus.md)
* [workflowTemplate](workflowTemplate.md)
* [workflowTemplateCreateRequest](workflowTemplateCreateRequest.md)
* [workflowTemplateDeleteResponse](workflowTemplateDeleteResponse.md)
* [workflowTemplateLintRequest](workflowTemplateLintRequest.md)
* [workflowTemplateRef](workflowTemplateRef.md)
* [workflowTemplateUpdateRequest](workflowTemplateUpdateRequest.md)
* [workflowTerminateRequest](workflowTerminateRequest.md)
* [workflowWatchEvent](workflowWatchEvent.md)
* [zipStrategy](zipStrategy.md)